Support vector regressor implementation (SVR)

--- a/SVM/Support Vector Classifier.ipynb
+++ b/SVM/Support Vector Classifier.ipynb
@@ -906,7 +906,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# hyperparamter tuning with SVC"
+    "# Hyperparamter Tuning with SVC"
    ]
   },
   {
