--- a/Model_pipeline/random forest.ipynb
+++ b/Model_pipeline/random forest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "4       24.59  3.61  Female     No  Sun  Dinner     4"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "Categories (2, object): ['Lunch', 'Dinner']"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "1       10.34  1.66    Male     No  Sun     0     3"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        " Name: time, Length: 244, dtype: int32)"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "26        13.37  2.00    Male     No   Sat     2"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
        "         1.        ,  0.        ]])"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,57 +586,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.svm import SVC\n",
-    "from sklearn.tree import DecisionTreeClassifier"
+    "from sklearn.svm import SVR\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "models = {\n",
-    "    'Support vector classifier' : SVC(),\n",
-    "    'Decision Tree Classifier' : DecisionTreeClassifier()\n",
+    "    'Support vector Regressor' : SVR(),\n",
+    "    'Decision Tree Regressor' : DecisionTreeRegressor(),\n",
+    "    'Linear Regression' : LinearRegression(),\n",
+    "    'Random Forest Regressor' : RandomForestRegressor()\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import r2_score\n",
     "\n",
     "def model_train_eval(X_train, y_train, X_test, y_test, models):\n",
     "    evaluation = {}\n",
     "    for name, model in models.items():\n",
     "        model.fit(X_train, y_train)\n",
     "        y_pred = model.predict(X_test)\n",
-    "        model_score = accuracy_score(y_test, y_pred)*100\n",
+    "        model_score = r2_score(y_test, y_pred)*100\n",
     "        evaluation[name] = model_score\n",
     "    return evaluation\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Support vector classifier': 91.8918918918919,\n",
-       " 'Decision Tree Classifier': 93.24324324324324}"
+       "{'Support vector Regressor': 61.45855388159103,\n",
+       " 'Decision Tree Regressor': 55.95238095238096,\n",
+       " 'Linear Regression': 68.59302512778405,\n",
+       " 'Random Forest Regressor': 69.68789682539682}"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
